other-vpol/block-pod-exec-by-pod-label/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bpe-podlabel-ns
