other-vpol/block-pod-exec-by-pod-label/block-pod-exec-by-pod-label.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-exec-by-pod-label
  annotations:
    policies.kyverno.io/title: Block Pod Exec by Pod Label
    policies.kyverno.io/category: Sample
    policies.kyverno.io/minversion: 1.19.1
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The `exec` command may be used to gain shell access, or run other commands, in a Pod's container. While this can
      be useful for troubleshooting purposes, it could represent an attack vector and is discouraged.
      This policy blocks Pod exec commands to Pods having the label `exec=false`.
spec:
  evaluation:
    background:
      enabled: true
  validationActions: ["Deny"]
  matchConstraints:
    resourceRules:
      - resources: ["pods/exec"]
        operations: ["CONNECT"]
        apiGroups: [""]
        apiVersions: ["v1"]
  variables:
    - name: pod
      expression: resource.Get("v1", "pods", request.namespace, request.name)
  validations:
    - message: >
        Pods in this namespace may not be exec'd into.
      expression: >
        variables.pod.metadata.?labels[?'exec'].orValue('') != 'false' || exceptions.allowedValues.exists(value, value == 'pod.exec:' + request.namespace + ':' + request.name)
