other-vpol/block-pod-exec-by-pod-label/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-pod-exec-by-pod-label
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../block-pod-exec-by-pod-label.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: pods.yaml
  - name: step-03
    try:
    - assert:
        file: pods-ready.yaml
        timeout: 2m
  - name: step-04
    try:
    - script:
        content: if kubectl exec -n bpe-podlabel-ns pod03 -- ls; then exit 1;else
          exit 0; fi
    - script:
        content: kubectl exec -n bpe-podlabel-ns pod01 -- ls
    - script:
        content: kubectl exec -n bpe-podlabel-ns pod02 -- ls
    - script:
        content: kubectl exec -n bpe-podlabel-ns pod04 -- ls
  - name: step-99
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n bpe-podlabel-ns
